--- a/_includes/about_me.html
+++ b/_includes/about_me.html
@@ -40,7 +40,7 @@
             Invited as a Guest Speaker by multiple Institutions across the globe.
     			</li>
     			<li>
-            A Mechatronics engineer 🛠️ with a passion and softcorner for AI :).
+            A Mechatronics engineer 🛠️ with a passion and softcorner for AI :)
     			</li>
 		    </ul>
 	    </div>
